--- a/Projeto2/.classpath
+++ b/Projeto2/.classpath
@@ -6,6 +6,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/core-4.4.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/core-4.4.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/sound.jar"/>
+	<classpathentry kind="lib" path="lib/jsyn-17.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
